# cookiecutter-python-cli-uv

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitleaks.toml  .mise.toml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.claude-plugin/: marketplace.json
{{cookiecutter.project_slug}}/.github/workflows/: publish.yml
{{cookiecutter.project_slug}}/plugins/{{cookiecutter.project_slug}}/.claude-plugin/: plugin.json
{{cookiecutter.project_slug}}/plugins/{{cookiecutter.project_slug}}/commands/: help.md
{{cookiecutter.project_slug}}/references/: README.md  docker-compose.yml  marketplace-plugin-guide.md
{{cookiecutter.project_slug}}/references/alloy/: config.alloy
{{cookiecutter.project_slug}}/references/grafana/provisioning/datasources/: datasources.yml
{{cookiecutter.project_slug}}/references/loki/: loki-config.yml
{{cookiecutter.project_slug}}/references/prometheus/: prometheus.yml
{{cookiecutter.project_slug}}/references/tempo/: tempo.yml
{{cookiecutter.project_slug}}/tests/: __init__.py  test_utils.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py  cli.py  completion.py  utils.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/telemetry/: __init__.py  config.py  decorators.py  exporters.py  service.py
